# centos-cv2-project-template

./: .gitignore  CMakeLists.txt  README.md  setup_ffmpeg_and_opencv.sh
src/: main.cc
